<resources>
    <!-- Locations -->
    <string name="app_name">Cafe Walker</string>
    <string name="location_north">北部</string>
    <string name="location_middle">中部</string>
    <string name="location_south">南部</string>
    <string name="location_east">東部</string>
    <string name="location_isolated">外島</string>
    <string name="taipei">台北</string>
    <string name="keelung">基隆</string>
    <string name="taoyuan">桃園</string>
    <string name="hsinchu">新竹</string>
    <string name="miaoli">苗栗</string>
    <string name="taichung">台中</string>
    <string name="changhua">彰化</string>
    <string name="nantou">南投</string>
    <string name="yunlin">雲林</string>
    <string name="chiayi">嘉義</string>
    <string name="tainan">台南</string>
    <string name="kaohsiung">高雄</string>
    <string name="pingtung">屏東</string>
    <string name="yilan">宜蘭</string>
    <string name="hualien">花蓮</string>
    <string name="taitung">台東</string>
    <string name="penghu">澎湖</string>
    <string name="lienchiang">連江</string>
    <string name="unknown_location">未知的地點</string>

    <!-- Data UI -->
    <string name="socket">插座: %1$s</string>
    <string name="wifi">Wifi: %1$.1f</string>
    <string name="cheap">價格平實: %1$.1f</string>
    <string name="socket_yes">有插座</string>
    <string name="socket_no">無插座</string>
    <string name="socket_maybe">部分座位有插座</string>
    <string name="limit_time_yes">一律限時</string>
    <string name="limit_time_no">無限時</string>
    <string name="limit_time_maybe">視情況限時(假日或客滿)</string>
    <string name="standing_yes">可站立工作</string>
    <string name="yes">\u25EF</string>
    <string name="maybe">\u25b3</string>
    <string name="no">\u2573</string>
    <string name="title_rating">綜合評比</string>
    <string name="title_opening">營業時間</string>
    <string name="info_mrt">鄰近捷運站： %1$s</string>
    <string name="info_arrival">交通方式：%1$s</string>
    <string name="no_data">尚未提供</string>
    <string name="rating_wifi">Wifi穩定： %1$.1f\u2605</string>
    <string name="rating_seat">通常有位： %1$.1f\u2605</string>
    <string name="rating_tasty">咖啡好喝： %1$.1f\u2605</string>
    <string name="rating_cheap">價格平實： %1$.1f\u2605</string>
    <string name="rating_quiet">安靜程度： %1$.1f\u2605</string>
    <string name="rating_music">裝潢音樂： %1$.1f\u2605</string>

    <!-- Events -->
    <string name="network_error">網路異常，請檢查你的網路連線狀態</string>
    <string name="first_launch_msg">第一次啟動的朋友你好\n以下是使用小技巧：\n1. 下方橫欄點開可顯示周遭咖啡廳\n2. 長按定位鈕可以更改城市\n3. 長按下方咖啡廳可在地圖前往</string>
    <string name="first_launch_button_text">我知道了</string>
    <string name="permission_not_grant">要取得裝置位置權限後才能使用呦～</string>
    <string name="shop_detail_invalid_id_msg">哎呀，有什麼出錯了</string>
    <string name="city_change_suggestion">不在所在的城市嗎？長按定位鈕可以選擇城市</string>
</resources>
