<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/location_north" android:title="@string/location_north">
        <menu>
            <item android:id="@+id/taipei"
                  android:title="@string/taipei"/>
            <item android:id="@+id/keelung"
                  android:title="@string/keelung"/>
            <item android:id="@+id/taoyuan"
                  android:title="@string/taoyuan"/>
            <item android:id="@+id/hsinchu"
                  android:title="@string/hsinchu"/>
            <item android:id="@+id/miaoli"
                  android:title="@string/miaoli"/>
        </menu>

    </item>

    <item android:id="@+id/location_middle" android:title="@string/location_middle">
        <menu>
            <item android:id="@+id/taichung"
                  android:title="@string/taichung"/>
            <item android:id="@+id/changhua"
                  android:title="@string/changhua"/>
            <item android:id="@+id/nantou"
                  android:title="@string/nantou"/>
            <item android:id="@+id/yunlin"
                  android:title="@string/yunlin"/>
        </menu>
    </item>

    <item android:id="@+id/location_south" android:title="@string/location_south">
        <menu>
            <item android:id="@+id/chiayi"
                  android:title="@string/chiayi"/>
            <item android:id="@+id/tainan"
                  android:title="@string/tainan"/>
            <item android:id="@+id/kaohsiung"
                  android:title="@string/kaohsiung"/>
            <item android:id="@+id/pingtung"
                  android:title="@string/pingtung"/>
        </menu>
    </item>

    <item android:id="@+id/location_east" android:title="@string/location_east">
        <menu>
            <item android:id="@+id/yilan"
                  android:title="@string/yilan"/>
            <item android:id="@+id/hualien"
                  android:title="@string/hualien"/>
            <item android:id="@+id/taitung"
                  android:title="@string/taitung"/>
        </menu>
    </item>

    <item android:id="@+id/location_isolated" android:title="@string/location_isolated">
        <menu>
            <item android:id="@+id/penghu"
                  android:title="@string/penghu"/>
            <item android:id="@+id/lienchiang"
                  android:title="@string/lienchiang"/>
        </menu>
        >
    </item>
</menu>